# lysbilde

./: .gitignore  AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/decisions/: 0001-annotation-layer-boundary.md
docs/design/phase 1/: .thumbnail  HANDOFF.md  Lysbilde Design.html  Lysbilde Prototype.html  macos-window.jsx  specification.md
docs/examples/: README.md
docs/examples/q2-product-launch/: 01-title.html  (+5 more)
docs/plans/: 0001-tauri-hello-world-plan.md  0002-realize-lysbilde-design-plan.md  0003-github-windows-builds-plan.md  0005-slide-annotations-plan.md  0007-slide-reordering-windows-plan.md
docs/specs/: 0001-tauri-hello-world-design.md
docs/tasks/: 0001-tauri-hello-world.md  0002-realize-design.md  0003-github-windows-builds.md  0004-window-chrome-controls.md  0005-slide-annotations.md  0006-powerpoint-style-fullscreen.md  0007-slide-reordering-windows.md
src/: App.css  App.test.tsx  App.tsx  presenterLayout.test.ts  tauriConfig.test.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: html_metadata.rs  lib.rs  project_store.rs
src/components/: Button.tsx  Modal.tsx  ResizeHandles.test.tsx  ResizeHandles.tsx  SlideThumbnail.test.tsx  SlideThumbnail.tsx  SlideViewport.test.tsx  SlideViewport.tsx  TitleBar.test.tsx  TitleBar.tsx
src/domain/: annotations.test.ts  annotations.ts  presenter.test.ts  presenter.ts  project.ts  projectAnnotations.test.ts  projectStore.ts  reorder.test.ts  reorder.ts
src/styles/: tokens.css
(+16 files in other folders)
